# experience

./: .gitignore  LICENSE  README.md
AlcoholSensor/: AlcoholSensor.ino  README.md
ChrisCornell/: ChrisCornell.ino  cc.fwx  cc.mtl
DisneySays/: DisneySays.ino  README.md
GTAI/GameServer/: Form1.Designer.cs  Form1.cs  Form1.resx  GameServer.csproj
GTAI/GameServer/Properties/: Resources.Designer.cs  Resources.resx
GTAI/RemoteControl/: RemoteControl.ino
GuitarHeroNoid/: README.md
GuitarHeroNoid/doc/: spec.doc
GuitarHeroNoid/src/: GuitarHeroNoid.sln
GuitarHeroNoid/src/dxfilter/: GuitarHero.sln  GuitarHero.vcproj  guitarhero.cpp  guitarhero.def  guitarhero.h  guitarhero_guids.h  guitarhero_prop.aps  guitarhero_prop.cpp  guitarhero_prop.rc  guitarheroprop.h  igh.h  inpout32.h  output.csv  readme.txt  resource.h  stack.cpp  stack.h
GuitarHeroNoid/src/guitarSOck/: InpoutTest.cpp  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  guitarSOck.clw  guitarSOck.cpp  guitarSOck.dsp  guitarSOck.dsw  guitarSOck.h  guitarSOck.opt  guitarSOck.plg  guitarSOck.sln  guitarSOck.vcproj
GuitarHeroNoid/src/linux/: Makefile  README  gh.c  pp.c
JustDanceFortnite/: CMakeLists.txt  FortniteFilter.cpp  FortniteFilter.h  README.md  obs-fortnite.json  plugin.cpp  plugin.h
LedSign/: LedSign.ino
PlasticDome/GameServer/: Form1.Designer.cs  Form1.cs  Form1.resx  GameServer.csproj  GameServer.sln
PlasticDome/GameServer/Properties/: Resources.Designer.cs
PlasticDome/RemoteControl/: RemoteControl.ino
RoombaPong/GameServer/: Form1.Designer.cs  Form1.cs  Form1.resx  GameServer.csproj  Program.cs  packages.config
RoombaPong/GameServer/GameServer/: Form1.Designer.cs  Form1.cs  GameServer.csproj
RoombaPong/GameServer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
RoombaPong/Hardware/: RoombaPong.fzz
RoombaPong/Hardware/RoombaPong/: RoombaPong-ESP8266-E12.txt  RoombaPong-ESP8266-ESP01.txt  RoombaPong.ino  generalFuntions.ino  roombaDefines.h  roombaFunctions.ino
SH1oh1/: SH1oh1.jucer
SH1oh1/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
SH1oh1/Builds/MacOSX/SH1oh1.xcodeproj/: project.pbxproj
SH1oh1/Builds/VisualStudio2019/: SH1oh1.sln  SH1oh1_SharedCode.vcxproj  SH1oh1_SharedCode.vcxproj.filters  SH1oh1_StandalonePlugin.vcxproj  SH1oh1_StandalonePlugin.vcxproj.filters  SH1oh1_VST3.vcxproj  SH1oh1_VST3.vcxproj.filters  SH1oh1_VST3ManifestHelper.vcxproj  resources.rc
SH1oh1/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h  include_foleys_gui_magic.cpp
SH1oh1/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  magic.sav(2).xml  magic.sav(3).xml  magic.xml
TerryPoison/OctoWS2811/VideoDisplay/: VideoDisplay.ino
TerryPoison/OctoWS2811/movie2serial/: movie2serial.pde
TerryPoison/OctoWS2811/syphon2serial/: syphon2serial.pde
UselessMachine/: UselessMachine.ino
UselessMachine/arduino/UMLight/: UMLight.ino
UselessMachine/arduino/UMServoMusic/: UMServoMusic.ino
UselessMachine/libraries/Adafruit_NeoPixel/examples/simpletest/: simpletest.ino
UselessMachine/libraries/Adafruit_NeoPixel/examples/strandtest/: strandtest.ino
UselessMachine/libraries/arduino-tvout/TVout/: TVout.cpp
UselessMachine/libraries/arduino-tvout/examples/DemoNTSC/: DemoNTSC.pde
UselessMachine/libraries/arduino-tvout/examples/DemoPAL/: DemoPAL.pde
UselessMachine/schematics/: UselessMachine.fzz
VegetablesSynth/: VegetablesSynth.ino
VegetablesSynth/VegetableSampler Project/: VegetableSampler.als
VegetablesSynth/VegetableSampler Project/Ableton Project Info/: Project.cfg
VegetablesSynth/sounds/: 1.wav.asd  2.wav.asd  3.wav.asd  4.wav.asd  5.wav.asd
